# api/handlers/v1/register.go
@@ -7,7 +7,7 @@ import (
 	"net/smtp"
 	"time"
 
-	pbc "github.com/Asliddin3/exam-api-gateway/genproto/customer"
+	"github.com/Asliddin3/exam-api-gateway/genproto/customer"
 	"github.com/Asliddin3/exam-api-gateway/pkg/logger"
 
 	"github.com/Asliddin3/exam-api-gateway/pkg/utils"
@@ -17,21 +17,26 @@ import (
 	"golang.org/x/net/context"
 )
 
+// @BasePath /api/v1
 // Register godoc
 // @Summary Register for authentication
 // @Tags Auth
 // @Accept json
 // @Produce json
 // @Param userData body models.Register true "user data"
-// @Success 201 {object} user.User
-// @Failure 400 {object} models.Error
+// @Success 201 "success"
 // @Router /register [post]
 func (h *handlerV1) Register(c *gin.Context) {
 
-	newUser := &pbc.CustomerRequest{}
-	c.ShouldBindJSON(newUser)
-
-	email, err := utils.IsValidMail(newUser.Email)
+	newUser := &customer.CustomerRequest{}
+	err := c.ShouldBindJSON(newUser)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{
+			"error": "error binding json to object",
+		})
+		return
+	}
+	err = utils.IsValidMail(newUser.Email)
 	if err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{
 			"error": "invalid email address",
@@ -42,8 +47,7 @@ func (h *handlerV1) Register(c *gin.Context) {
 	ctx, cancel := context.WithTimeout(context.Background(), time.Second*time.Duration(h.cfg.CtxTimeout))
 	defer cancel()
 
-	exists, err := h.serviceManager.CustomerService().CheckField(ctx, &pbc.CheckFieldRequest{Key: "username", Value: newUser.UserName})
-
+	exists, err := h.serviceManager.CustomerService().CheckField(ctx, &customer.CheckFieldRequest{Key: "username", Value: newUser.UserName})
 	if err != nil {
 		h.log.Error("error while checking username existance", logger.Error(err))
 		c.JSON(http.StatusBadRequest, gin.H{
@@ -62,19 +66,38 @@ func (h *handlerV1) Register(c *gin.Context) {
 	ctx, cancel = context.WithTimeout(context.Background(), time.Second*time.Duration(h.cfg.CtxTimeout))
 	defer cancel()
 
-	exists, err = h.serviceManager.CustomerService().CheckField(ctx, &pbc.CheckFieldRequest{Key: "email", Value: newUser.Email})
-
+	exists, err = h.serviceManager.CustomerService().CheckField(ctx, &customer.CheckFieldRequest{Key: "email", Value: newUser.Email})
 	if err != nil {
-		h.log.Error("error while checking email existance", logger.Error(err))
 		c.JSON(http.StatusBadRequest, gin.H{
-			"error": "error while cheking email existance",
+			"error": "error while checking email",
 		})
 		return
 	}
-
 	if exists.Exists {
 		c.JSON(http.StatusOK, gin.H{
 			"message": "such email already exists",
+		})
+		return
+	}
+	fmt.Println("error in redis", err)
+	fmt.Println(newUser.Email)
+	_, err = h.redis.Get(newUser.Email)
+	if err != nil {
+		h.log.Error("error email already registered", logger.Error(err))
+		c.JSON(http.StatusAlreadyReported, gin.H{
+			"error": "error email already exists",
+		})
+		return
+	}
+	val, err := h.redis.Get("1")
+	fmt.Println(val)
+
+	_, err = h.redis.Get(newUser.UserName)
+	fmt.Println(err)
+	if err == nil {
+		h.log.Error("error username already registered", logger.Error(err))
+		c.JSON(http.StatusAlreadyReported, gin.H{
+			"error": "error username already exists",
 		})
 		return
 	}
@@ -91,39 +114,33 @@ func (h *handlerV1) Register(c *gin.Context) {
 
 	newUser.PassWord = string(hashPass)
 
-	jsNewUser, err := json.Marshal(newUser)
-	if err != nil {
-		h.log.Error("error while marshaling new user, inorder to insert it to redis", logger.Error(err))
-		c.JSON(http.StatusBadRequest, gin.H{
-			"error": "error while creating user",
-		})
-		return
-	}
-
 	code := utils.RandomNum()
 
 	_, err = h.redis.Get(fmt.Sprint(code))
-	if err == nil {
-		code = utils.RandomNum()
+	for err != nil {
+		code := utils.RandomNum()
+		_, err = h.redis.Get(fmt.Sprint(code))
 	}
-
-	if err = h.redis.SetWithTTL(fmt.Sprint(code), string(jsNewUser), 86000); err != nil {
+	userJSON, err := json.Marshal(newUser)
+	if err != nil {
+		h.log.Error("error whi.e marshiling customer")
+		c.JSON(http.StatusBadGateway, gin.H{
+			"error": "error while marshiling customer",
+		})
+		return
+	}
+	if err = h.redis.SetWithTTL(fmt.Sprint(code), string(userJSON), 86000); err != nil {
 		fmt.Println(err)
-		h.log.Error("error while inserting new user into redis")
+		h.log.Error("error while inserting new username into redis")
 		c.JSON(http.StatusInternalServerError, gin.H{
 			"error": "something went wrong, please try again",
 		})
 		return
 	}
 
-	newUser.Email = email
-
-	ctx, cancel = context.WithTimeout(context.Background(), time.Second*time.Duration(h.cfg.CtxTimeout))
-	defer cancel()
-	res, err := EmailVerification("Verigication", fmt.Sprint(code), email)
-	// res, err := h.serviceManager.EmailService().Send(ctx, &pbe.Email{Subject: "Verification.", Body: fmt.Sprint(code), Recipients: []*pbe.Recipient{{Email: email}}})
+	res, err := EmailVerification("Verefication", fmt.Sprint(code), newUser.Email)
 	if err != nil {
-		h.log.Error("error while sending verification code to new user", logger.Error(err))
+		h.log.Error("error while sending verification code to new customer", logger.Error(err))
 		c.JSON(http.StatusInternalServerError, gin.H{
 			"error": "something went wrong, please try again",
 		})
@@ -142,7 +159,7 @@ func EmailVerification(subject, code, email string) (string, error) {
 
 	// Receiver email address.
 	to := []string{
-		"rahimzanovmuhammadumar@gmail.com",
+		"asliddindeh@mail.ru",
 	}
 
 	// smtp server configuration.
